[package]
name = "nom-plus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description =  "A Rust crate that provides highly contextual error outputs for Nom parsers, used in conjunction with nom-plus-macros"


[lib]
path = "src/lib.rs"  


[dependencies]
syn = { version = "2.0.90", features = ["full", "extra-traits"] }
quote = "1.0.37"
nom = "7.1.3"
proc-macro2 = {version="1.0.92",features= ["span-locations"]}
annotate-snippets = "0.11.5"
anstyle = "1.0.10"
